Optimised and fixed some bugs on mobile resolutions

--- a/styles/general.css
+++ b/styles/general.css
@@ -39,7 +39,7 @@ body {
 
 /* Set max width and centers the block */
 .block {
-    max-width: 600px;
+    max-width: 700px;
     margin: 0 auto;
     margin-bottom: 100px;
 }
