--- a/styles/home.css
+++ b/styles/home.css
@@ -12,6 +12,7 @@
 
 .face-shot {
     filter: grayscale();
+    background-size: cover;
     border: 1.5px solid black;
     border-radius: 10px;
     transition: all 0.3s ease-in-out;
@@ -205,9 +206,18 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+    .hero {
+        align-items: center;
+    }
+
     .h1-hero {
         position: relative;
         font-size: 32px;
+        text-align: center;
+    }
+
+    .hero-description {
+        text-align: center;
     }
 
     .projects ul {
